--- a/6chefs2.cfg
+++ b/6chefs2.cfg
@@ -1,5 +1,5 @@
 <SolutionConfig Version="3.10.0.0">
-  <PublishDirectory Value="Resources/csb/" />
+  <PublishDirectory Value="Resources/" />
   <PackageDirectory Value="package/" />
   <PublishType Value="Reference" />
   <SolutionSize Value="800 * 600" />
