--- a/Resources/event/EAST-3F-madamroom.json
+++ b/Resources/event/EAST-3F-madamroom.json
@@ -210,6 +210,7 @@
 									"type":"barrage",
 									"times":28,
 									"limit":5.0,
+									"file":"door_unopen.mp3",
 									"true":[
 										{
 											"type":"sequence",
