--- a/proj.win32/6chefs2.vcxproj.filters
+++ b/proj.win32/6chefs2.vcxproj.filters
@@ -797,4 +797,7 @@
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="res\game.ico" />
+  </ItemGroup>
 </Project>
