--- a/Resources/event/EAST-1F-corridor.json
+++ b/Resources/event/EAST-1F-corridor.json
@@ -188,7 +188,7 @@
 							"type":"spawn",
 							"action":[
 								{
-									"type":"reaction",
+									"type":"playSE",
 									"file":"reaction.mp3",
 									"volume":0.25
 								},
