--- a/Resources/event/EAST-1F-chef'skitchen.json
+++ b/Resources/event/EAST-1F-chef'skitchen.json
@@ -912,7 +912,7 @@
 			],
 			"action":[
 				{
-					"type":"removeChara",
+					"type":"removeObject",
 					"objID":"1930"
 				}
 			]
@@ -925,7 +925,7 @@
 			"name":"エッグボイラー"
 		},
 		{
-			"type":"removeChara",
+			"type":"removeObject",
 			"objID":"1930"
 		},
 		{
