--- a/Resources/event/corridor(toEAST).json
+++ b/Resources/event/corridor(toEAST).json
@@ -66,7 +66,7 @@
 							"name":"賞味期限切れ前の卵"
 						},
 						{
-							"type":"removeChara",
+							"type":"removeObject",
 							"objID":"198"
 						}
 					]
@@ -91,7 +91,7 @@
 					"layer":"MonoUe"
 				},
 				{
-					"type":"removeChara",
+					"type":"removeObject",
 					"objID":"198"
 				}
 			]
